updated phrase and word search
