# src/middleware/swagger/swagger.yaml
@@ -468,21 +468,18 @@ paths:
         - BearerAuth: []
       parameters:
         - in: query
-          name: searchParam
+          name: filters
           schema:
-            type: string
-            enum:
-              - title
-              - content
-            required: false
-          description: Search parameter that sets among whom the search substring will be searched - titles or contents
-        - in: query
-          name: searchString
-          schema:
-            type: string
-            default: ''
-            required: false
-          description: String that is searched among titles or contents
+            type: object
+            properties:
+              title || content:
+                type: object
+                properties:
+                  phraseSearch || wordSearch:
+                    type: string
+          required: false
+          description: Object that defines filters for searching among titles or contents
+          style: deepObject
       responses:
         '200':
           description: List of all user posts
